header 스타일 완성

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100&display=swap');
 $tablet: 1179px;
 $mobile: 539px;
 
@@ -18,3 +19,4 @@ $mobile: 539px;
 @import 'sub/location';
 @import 'sub/members';
 @import 'sub/youtube';
+@import 'sub/login';
