--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -55,4 +55,27 @@ header {
       }
     }
   }
+
+  &.sub {
+    background: lightcoral;
+    .inner {
+      min-height: 80px;
+      #gnb {
+        left: 10%;
+        a {
+          color: #000;
+        }
+      }
+      #util {
+        top: 50px;
+        > li {
+          a {
+            .i {
+              color: #000;
+            }
+          }
+        }
+      }
+    }
+  }
 }
