서브레이아웃 생성 & porps 전달

--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -17,7 +17,7 @@ header {
         img {
           width: 100%;
           height: 100%;
-          object-fit: cover;
+          object-fit: contain;
         }
       }
     }
@@ -54,6 +54,14 @@ header {
         }
       }
     }
+    .fa-bars {
+      font-size: 24px;
+      position: absolute;
+      right: 0;
+      top: 50px;
+      color: #fff;
+      display: none;
+    }
   }
 
   &.sub {
@@ -74,6 +82,62 @@ header {
               color: #000;
             }
           }
+        }
+      }
+      .fa-bars {
+        top: 40px;
+        color: #000;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $tablet) {
+  header {
+    .inner {
+      width: 100%;
+      h1 {
+        left: 40px;
+      }
+      #gnb {
+        display: none;
+      }
+      #util {
+        right: 40px;
+      }
+      .fa-bars {
+        display: block;
+        right: 40px;
+      }
+    }
+
+    &.sub {
+      background: lightcoral;
+      .inner {
+        min-height: 80px;
+        h1 {
+          top: 15px;
+          left: 50%;
+          margin-left: -25px;
+        }
+        #util {
+          top: 30px;
+          > li {
+            a {
+              .fa-arrow-right-to-bracket,
+              .fa-user {
+                display: none;
+              }
+              .fa-location-dot {
+                font-size: 24px;
+              }
+            }
+          }
+        }
+        .fa-bars {
+          top: 30px;
+          left: 40px;
+          color: #000;
         }
       }
     }
