department page - intro_container 추가

--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -65,7 +65,7 @@ header {
   }
 
   &.sub {
-    background: lightcoral;
+    background: #efefef;
     .inner {
       min-height: 80px;
       #gnb {
