header color 변경-여전히 임시

--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -112,7 +112,7 @@ header {
     }
 
     &.sub {
-      background: lightcoral;
+      background: #efefef;
       .inner {
         min-height: 80px;
         h1 {
