--- a/src/scss/sub/_location.scss
+++ b/src/scss/sub/_location.scss
@@ -7,16 +7,127 @@
     height: 500px;
     background: #000;
   }
+  .location_intro {
+    width: 100%;
+    span {
+      font: 16px/1 'playfair display';
+      color: #c9ab81;
+      font-style: italic;
+      display: block;
+      text-align: center;
+      margin-bottom: 10px;
+    }
+    h2 {
+      font: 35px/1 'playfair display';
+      color: #222;
+      letter-spacing: 3px;
+      text-align: center;
+      margin-bottom: 30px;
+      position: relative;
+      &::before {
+        content: '';
+        display: block;
+        width: 150px;
+        height: 1px;
+        background: #555;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translateX(-200%);
+        margin-top: -0.5px;
+      }
+      &::after {
+        content: '';
+        display: block;
+        width: 150px;
+        height: 1px;
+        background: #555;
+        position: absolute;
+        bottom: 50%;
+        left: 50%;
+        transform: translateX(100%);
+        margin-bottom: -0.5px;
+        // transform: translateX(-250%);
+      }
+    }
+    p {
+      font: bold 14px/1.5 'roboto';
+      text-align: center;
+      padding: 0 25%;
+      margin-bottom: 50px;
+    }
+  }
+
   ul {
     width: 100%;
     display: flex;
     li {
-      flex: 1;
-      border: 1px solid #888;
+      width: 33.3333%;
       margin-bottom: 50px;
-      background: lightpink;
-      &.on {
-        background: lightseagreen;
+      cursor: pointer;
+      .branch_info {
+        width: 300px;
+        height: 300px;
+        margin: 0 auto;
+        padding: 80px 60px;
+        border-radius: 50%;
+        h3 {
+          font: 22px/1 'playfair display';
+          color: #222;
+          font-weight: 700;
+          margin-bottom: 10px;
+          position: relative;
+          &::before {
+            content: '';
+            display: block;
+            width: 40px;
+            height: 1px;
+            background: #222;
+            position: absolute;
+            left: -50px;
+            transform: rotate(-30deg);
+            transform-origin: top right;
+          }
+        }
+        > div {
+          font: bold 14px/1 'roboto';
+          color: #222;
+          margin-bottom: 10px;
+        }
+      }
+      &.on .branch_info {
+        background: #d8f2f2;
+      }
+    }
+  }
+  button {
+    display: block;
+    cursor: pointer;
+    height: 30px;
+    border: 1px soild #888;
+    padding: 5px 20px;
+    font: bold 14px/1 'roboto';
+  }
+  #contact_info {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 70px;
+    > li {
+      width: 45%;
+      span {
+        font: 16px/1 'playfair display';
+        color: #c9ab81;
+        font-style: italic;
+        display: block;
+        margin-bottom: 10px;
+      }
+      h2 {
+        font: 35px/1 'playfair display';
+        color: #222;
+        letter-spacing: 3px;
+        margin-bottom: 30px;
       }
     }
   }
