--- a/src/scss/sub/_community.scss
+++ b/src/scss/sub/_community.scss
@@ -2,4 +2,79 @@
   figure {
     background: lightblue;
   }
+  > .inner {
+    .inputBox {
+      width: 100%;
+      border: 1px solid #222;
+      padding: 50px;
+      margin-bottom: 50px;
+      input[type='text'],
+      textarea {
+        width: 50%;
+        padding: 8px 10px;
+        border: 1px solid #aaa;
+        margin-bottom: 20px;
+        resize: none;
+      }
+      .btnSet {
+        button {
+          width: 150px;
+          height: 30px;
+          display: inline-block;
+          justify-content: center;
+          align-items: center;
+          border: none;
+          background: #555;
+          color: #fff;
+          cursor: pointer;
+          margin-right: 20px;
+        }
+      }
+    }
+
+    .showBox {
+      width: 100%;
+      border: 1px solid #bbb;
+      padding: 50px;
+      article {
+        background: #efefef;
+        padding: 30px;
+        margin-bottom: 40px;
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        align-content: center;
+
+        .editTxt {
+          width: 60%;
+          input[type='text'],
+          textarea {
+            width: 100%;
+            padding: 8px 10px;
+            border: 1px solid lightblue;
+            margin-bottom: 20px;
+            background: #eaf9f9;
+            resize: none;
+          }
+        }
+
+        .btnSet {
+          display: flex;
+          align-items: center;
+          button {
+            background: transparent;
+            margin: 10px;
+            cursor: pointer;
+            border: none;
+            &:nth-of-type(1) {
+              color: orange;
+            }
+            &:nth-of-type(2) {
+              color: orangered;
+            }
+          }
+        }
+      }
+    }
+  }
 }
