--- a/src/scss/sub/_location.scss
+++ b/src/scss/sub/_location.scss
@@ -90,9 +90,9 @@
           }
         }
         > div {
-          font: bold 14px/1 'roboto';
+          font: bold 14px/1.4 'roboto';
           color: #222;
-          margin-bottom: 10px;
+          margin-bottom: 15px;
         }
       }
       &.on .branch_info {
@@ -108,6 +108,7 @@
     padding: 5px 20px;
     font: bold 14px/1 'roboto';
   }
+
   #contact_info {
     width: 100%;
     display: flex;
@@ -128,6 +129,62 @@
         color: #222;
         letter-spacing: 3px;
         margin-bottom: 30px;
+      }
+      form {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        textarea {
+          width: 100%;
+          border: none;
+          border-bottom: 1px solid #383838;
+          padding: 20px 0 10px 10px;
+          font: 14px/1 'playfair display';
+          font-style: italic;
+          margin-bottom: 30px;
+        }
+        textarea:focus,
+        input:focus {
+          outline: none;
+        }
+        input[type='text'] {
+          width: 48%;
+          border: none;
+          border-bottom: 1px solid #383838;
+          padding: 20px 0 10px 10px;
+          font: 14px/1 'playfair display';
+          font-style: italic;
+          margin-bottom: 50px;
+        }
+        input[type='submit'] {
+          background: none;
+          border: 1px solid #c9ab81;
+          width: 120px;
+          height: 50px;
+        }
+      }
+      .reserve_info {
+        width: 80%;
+        font: bold 14px/1.5 'roboto';
+        color: #383838;
+        margin-top: 50px;
+        > div {
+          margin-bottom: 10px;
+        }
+      }
+      > .sns {
+        margin-top: 30px;
+        a {
+          margin-right: 30px;
+          .i {
+            font-size: 15px;
+            color: #383838;
+          }
+          &:hover .i {
+            color: #c9ab81;
+          }
+        }
       }
     }
   }
