--- a/src/scss/sub/_youtube.scss
+++ b/src/scss/sub/_youtube.scss
@@ -2,4 +2,78 @@
   figure {
     background: lightgoldenrodyellow;
   }
+  article {
+    &:nth-of-type(1) {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      position: relative;
+      .pic {
+        width: 50%;
+        height: 420px;
+      }
+      > .txt {
+        position: relative;
+        width: 45%;
+        margin-top: 320px;
+      }
+    }
+    width: 33.333%;
+    display: inline-flex;
+    flex-wrap: wrap;
+    padding: 10px;
+    margin-bottom: 20px;
+    .pic {
+      width: 100%;
+      height: 210px;
+      margin-bottom: 20px;
+      cursor: pointer;
+      transition: 0.5s;
+      position: relative;
+      background: #000;
+      &:hover img {
+        filter: brightness(30%);
+      }
+      &:hover .fa-youtube {
+        display: block;
+      }
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      .fa-youtube {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 30px;
+        color: #fff;
+        display: none;
+        transition: 0.5s;
+      }
+    }
+    > .txt {
+      width: 100%;
+      height: 100px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      h3 {
+        font: bold 18px/1 'noto sans';
+        font-weight: 400;
+        color: #222;
+      }
+      p {
+        font: 16px/1 'noto sans';
+        font-weight: 100;
+        color: #222;
+      }
+      span {
+        font: 14px/1 'noto sans';
+        font-weight: 100;
+        color: #555;
+      }
+    }
+  }
 }
