Location-contact 부분 보완

--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -31,6 +31,7 @@ header {
           display: inline-block;
           padding: 20px 30px;
           font: bold 16px 'noto sans';
+          font-weight: 100;
           color: #fff;
           &:last-of-type {
             padding: 20px 0 20px 30px;
