--- a/src/scss/sub/_members.scss
+++ b/src/scss/sub/_members.scss
@@ -20,6 +20,7 @@
         label {
           color: #555;
           font: 18px/30px 'noto sans';
+          font-weight: 100;
           position: absolute;
           left: 0;
           top: 0;
