--- a/src/scss/common/_layout.scss
+++ b/src/scss/common/_layout.scss
@@ -11,6 +11,7 @@
     position: relative;
     h1 {
       font: normal 60px/1 'noto sans';
+      font-weight: 100;
       color: #111;
       margin-bottom: 70px;
       &::after {
