--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;400&family=Playfair+Display:wght@400;700&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;400&family=Playfair+Display:wght@400;700&family=Roboto:wght@100;300&display=swap');
 $tablet: 1179px;
 $mobile: 539px;
 
