--- a/src/scss/sub/_department.scss
+++ b/src/scss/sub/_department.scss
@@ -79,6 +79,7 @@
             float: right;
             letter-spacing: 1.2px;
             font: 14px/1.8 'roboto';
+            font-weight: 100;
             color: #878787;
             &::before {
               content: '';
@@ -97,6 +98,7 @@
       margin-top: 150px;
       > p {
         font: 15px/1 'roboto';
+        font-weight: 100;
         color: #878787;
         text-align: center;
         margin-bottom: 40px;
@@ -148,6 +150,7 @@
             }
             > p {
               font: 14px/1 'roboto';
+              font-weight: 100;
               color: #878787;
               display: inline-block;
               padding-left: 20px;
