--- a/src/scss/sub/_members.scss
+++ b/src/scss/sub/_members.scss
@@ -27,7 +27,8 @@
           padding: 0 5px;
           transition: 0.2s;
         }
-        > input {
+        > input[type='text'],
+        input[type='password'] {
           font-size: 16px;
           display: block;
           width: 100%;
@@ -37,21 +38,84 @@
           border: 0;
           border-bottom: 1px solid #ccc;
           outline: none;
+          margin-top: 50px;
           &:focus ~ label,
           &:not(:placeholder-shown) ~ label {
             top: -30px;
             font-size: 18px;
           }
           &:focus {
-            border-bottom: 1px solid #555;
+            border-bottom: 1px solid hotpink;
           }
         }
         .err {
-          font: 12px/1 'roboto';
+          margin-top: 5px;
+          font: bold 14px/1 'roboto';
+          font-weight: 300;
           color: hotpink;
-          margin-bottom: 10px;
         }
       }
+
+      .field2 {
+        position: relative;
+        margin-top: 50px;
+        .radio,
+        .checkbox {
+          width: 100%;
+          height: 30px;
+          padding: 0 5px;
+          border-bottom: 1px solid #ccc;
+          display: flex;
+          p {
+            color: #555;
+            font: 18px/30px 'noto sans';
+            font-weight: 100;
+            margin-right: 50px;
+          }
+          label {
+            color: #555;
+            font: 15px/30px 'roboto';
+            font-weight: 300;
+          }
+          input[type='radio'],
+          input[type='checkbox'] {
+            margin: 0 20px 0 10px;
+          }
+        }
+        > .err {
+          margin-top: 5px;
+          font: bold 14px/1 'roboto';
+          font-weight: 300;
+          color: hotpink;
+        }
+      }
+
+      .field3 {
+        position: relative;
+        margin-top: 50px;
+        .select {
+          width: 100%;
+          height: 30px;
+          padding: 0 5px;
+          border-bottom: 1px solid #ccc;
+          display: flex;
+          > label {
+            color: #555;
+            font: 18px/30px 'noto sans';
+            font-weight: 100;
+            margin-right: 50px;
+          }
+          select {
+            border: none;
+            width: 60%;
+            color: #555;
+            font: 15px/30px 'roboto';
+            font-weight: 300;
+            outline: none;
+          }
+        }
+      }
+
       .btnset {
         width: 100%;
         padding: 15px;
