--- a/src/scss/sub/_members.scss
+++ b/src/scss/sub/_members.scss
@@ -114,11 +114,18 @@
             outline: none;
           }
         }
+        > .err {
+          margin-top: 5px;
+          font: bold 14px/1 'roboto';
+          font-weight: 300;
+          color: hotpink;
+        }
       }
 
       .btnset {
         width: 100%;
         padding: 15px;
+        margin-top: 50px;
         position: relative;
         display: flex;
         justify-content: center;
