--- a/src/scss/common/_popup.scss
+++ b/src/scss/common/_popup.scss
@@ -17,6 +17,11 @@
       height: 100%;
       object-fit: cover;
     }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
   }
   .close {
     font: bold 16px/1 'noto sans';
