--- a/src/scss/sub/_gallery.scss
+++ b/src/scss/sub/_gallery.scss
@@ -2,4 +2,116 @@
   figure {
     background: lightcyan;
   }
+  .loading {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  .list {
+    width: 100%;
+    position: relative;
+    display: flex;
+    margin-bottom: 30px;
+    div {
+      position: relative;
+      display: inline-block;
+      margin-right: 30px;
+      button {
+        border: none;
+        background-color: #fff;
+        font: 16px/1 'roboto';
+        color: #878787;
+        font-weight: 300;
+        cursor: pointer;
+      }
+      &:last-child button {
+        border: 1px solid #878787;
+        font: 14px/1 'roboto';
+        padding: 5px 10px;
+        &:hover {
+          border: 1px solid #fc8276;
+        }
+      }
+
+      input {
+        width: 150px;
+        border: none;
+        border-bottom: 1px solid #878787;
+        font: 14px/1 'roboto';
+        color: #878787;
+        padding: 0 10px 5px;
+        outline: none;
+        margin-right: 20px;
+        &:focus {
+          border-bottom: 1px solid #fc8276;
+        }
+      }
+
+      &::after {
+        content: '/';
+        display: block;
+        color: #878787;
+        position: absolute;
+        top: 0;
+        right: -15px;
+      }
+      &:last-child::after {
+        display: none;
+      }
+    }
+  }
+  .frame {
+    transform: translateY(200px);
+    opacity: 0;
+    transition: transform 0.5s, opacity 0.5s;
+    &.on {
+      transform: translateY(0);
+      opacity: 1;
+    }
+    &::after {
+      content: '';
+      display: block;
+      clear: both;
+    }
+    article {
+      width: 25%;
+      float: left;
+      padding: 10px;
+      .inner {
+        width: 100%;
+        padding: 10px;
+        box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.1);
+        .pic {
+          width: 100%;
+          margin-bottom: 5px;
+          img {
+            width: 100%;
+          }
+        }
+        h2 {
+          font: 14px/1.2 'roboto';
+          color: #222;
+          font-weight: 300;
+          margin-bottom: 5px;
+        }
+        .profile {
+          display: flex;
+          align-items: center;
+          img {
+            width: 30px;
+            border-radius: 50%;
+            margin-right: 10px;
+          }
+          span {
+            color: #777;
+            cursor: pointer;
+            transition: 0.5s;
+            font: 12px/1 'roboto';
+            font-weight: 300;
+          }
+        }
+      }
+    }
+  }
 }
