유투브 페이지  수정

--- a/src/scss/sub/_community.scss
+++ b/src/scss/sub/_community.scss
@@ -34,8 +34,8 @@
         outline: none;
         resize: none;
       }
-      .btnSet {
-        width: 390px;
+      > .btnSet {
+        width: 490px;
         position: relative;
         display: flex;
         justify-content: space-between;
