--- a/src/scss/sub/_youtube.scss
+++ b/src/scss/sub/_youtube.scss
@@ -15,7 +15,13 @@
       > .txt {
         position: relative;
         width: 45%;
-        margin-top: 320px;
+        margin-top: 0;
+        h3 {
+          margin-bottom: 50px;
+        }
+        p {
+          margin-bottom: 50px;
+        }
       }
     }
     width: 33.333%;
