--- a/src/scss/sub/_community.scss
+++ b/src/scss/sub/_community.scss
@@ -102,15 +102,21 @@
           }
         }
         .editTxt {
-          width: 60%;
+          width: 100%;
+          position: relative;
           input[type='text'],
           textarea {
             width: 100%;
             padding: 8px 10px;
-            border: 1px solid lightblue;
+            border: none;
+            border-bottom: 1px solid #878787;
             margin-bottom: 20px;
-            background: #eaf9f9;
+            background: transparent;
             resize: none;
+            outline: none;
+          }
+          textarea {
+            height: 150px;
           }
         }
 
