--- a/src/scss/sub/_youtube.scss
+++ b/src/scss/sub/_youtube.scss
@@ -17,6 +17,7 @@
         width: 45%;
         margin-top: 0;
         h3 {
+          font: bold 20px/1.2 'noto sans';
           margin-bottom: 50px;
         }
         p {
@@ -71,7 +72,7 @@
         color: #222;
       }
       p {
-        font: 16px/1 'noto sans';
+        font: 16px/1.5 'noto sans';
         font-weight: 100;
         color: #222;
       }
