--- a/src/scss/common/_footer.scss
+++ b/src/scss/common/_footer.scss
@@ -1,14 +1,102 @@
 footer {
   width: 100%;
   background-color: #bbb;
-  padding: 100px 0;
+  padding: 30px 0;
   .inner {
     width: 1180px;
     margin: 0px auto;
     position: relative;
-    p {
+    .footer_txt {
+      width: 100%;
+      position: relative;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      .company {
+        width: 40%;
+        position: relative;
+        img {
+          width: 45%;
+          margin-bottom: 30px;
+        }
+        p {
+          font: 14px/1.5 'noto sans';
+          font-weight: 100;
+          color: #383838;
+        }
+      }
+      > .contact {
+        width: 20%;
+        h2 {
+          font: 20px/1.2 'noto sans';
+          font-weight: 400;
+          color: #383838;
+          letter-spacing: 2px;
+          margin-bottom: 10px;
+        }
+        div {
+          font: 14px/1.3 'noto sans';
+          font-weight: 100;
+          color: #383838;
+          margin-bottom: 10px;
+        }
+      }
+      > .sns {
+        width: 20%;
+        h2 {
+          font: 20px/1.2 'noto sans';
+          font-weight: 400;
+          color: #383838;
+          letter-spacing: 2px;
+          margin-bottom: 10px;
+        }
+        p {
+          font: 14px/1.3 'noto sans';
+          font-weight: 100;
+          color: #383838;
+          margin-bottom: 20px;
+        }
+        a {
+          display: inline-block;
+          margin-right: 10px;
+          width: 35px;
+          height: 35px;
+          // padding: 10px;
+          border: 1px solid #383838;
+          border-radius: 50%;
+          position: relative;
+          .i {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 15px;
+            color: #383838;
+          }
+          &:hover {
+            background-color: #383838;
+            .i {
+              color: #bbb;
+            }
+          }
+        }
+      }
+      &::after {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 1px;
+        background: rgba(56, 56, 56, 0.3);
+        margin-top: 20px;
+      }
+    }
+    > p {
+      font: 14px/1.3 'roboto';
+      font-weight: 100;
+      color: #383838;
+      margin-bottom: 20px;
       text-align: center;
-      color: #999;
+      margin-top: 30px;
     }
   }
 }
