--- a/src/scss/common/_layout.scss
+++ b/src/scss/common/_layout.scss
@@ -1,8 +1,14 @@
 .content {
   figure {
     width: 100%;
-    height: 300px;
-    background: #bbb;
+    height: 320px;
+    background: #111;
+    position: relative;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
   > .inner {
     width: 1180px;
