--- a/src/scss/main/_visual.scss
+++ b/src/scss/main/_visual.scss
@@ -1,7 +1,10 @@
-// #visual {
-//   width: 100%;
-//   height: 100vh;
-//   background: lightgreen;
-//   position: relative;
-//   z-index: 1;
-// }
+#visual {
+  width: 100%;
+  height: 400px;
+  position: relative;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
