--- a/src/scss/sub/_community.scss
+++ b/src/scss/sub/_community.scss
@@ -154,12 +154,12 @@
       &::before {
         content: '';
         display: block;
-        width: 30%;
+        width: 40%;
         height: 100%;
         background: #f8f7f5;
         position: absolute;
         top: 0;
-        left: -10%;
+        left: -30%;
       }
       &::after {
         content: '';
@@ -170,6 +170,108 @@
         position: absolute;
         top: 0;
         right: -30%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $tablet) {
+  .Community {
+    > .inner {
+      .inputBox {
+        p {
+          font: 65px/1 'playfair display';
+          font-weight: 700;
+          position: absolute;
+          top: -45px;
+          left: 50px;
+        }
+
+        > .btnSet {
+          width: 50%;
+        }
+      }
+
+      .showBox {
+        width: 100%;
+        article {
+          width: 32%;
+          margin-right: 2%;
+          height: 350px;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $mobile) {
+  .Community {
+    > .inner {
+      .inputBox {
+        width: 100%;
+        height: 45vh;
+        padding: 20px 20px 0px;
+        margin-top: 120px;
+        margin-bottom: 20px;
+        position: relative;
+        p {
+          width: 100%;
+          text-align: center;
+          font: 30px/1 'playfair display';
+          font-weight: 700;
+          top: -30px;
+          left: 0;
+        }
+
+        input[type='text'],
+        textarea {
+          width: 90%;
+        }
+        > .btnSet {
+          width: 90%;
+        }
+      }
+
+      .showBox {
+        width: 100%;
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        background: #f8f7f5;
+        > p {
+          font: 20px/1 'playfair display';
+          font-weight: 400;
+          margin: 60px 0;
+        }
+        article {
+          width: 100%;
+          margin: 0 20px;
+          height: 300px;
+          padding: 20px;
+          margin-bottom: 40px;
+          &:nth-of-type(3n) {
+            margin-right: 20px;
+          }
+          .showBox_inner {
+            .txt {
+              h2 {
+                margin-bottom: 60px;
+              }
+              p {
+                font: 12px/1.8 'roboto';
+              }
+            }
+          }
+
+          .btnSet {
+          }
+          &:nth-of-type(3n + 1) button {
+            background: rgb(146, 152, 139);
+          }
+          &:nth-of-type(3n) button {
+            background: rgb(186, 172, 157);
+          }
+        }
       }
     }
   }
