--- a/src/scss/sub/_department.scss
+++ b/src/scss/sub/_department.scss
@@ -1,4 +1,38 @@
 .Department {
+  width: 1180px;
+  margin: 0 auto;
+  position: relative;
+  figure {
+    width: 650px;
+    height: 350px;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 140px 0;
+    opacity: 0.9;
+    &::before {
+      content: 'We are';
+      display: block;
+      font: 150px/1 'playfair display';
+      font-weight: 700;
+      color: transparent;
+      -webkit-text-stroke: 1px #000;
+      position: absolute;
+      z-index: 1;
+      top: -130px;
+      left: -40%;
+    }
+    &::after {
+      content: 'The team';
+      display: block;
+      font: 130px/1 'playfair display';
+      font-weight: 700;
+      color: #000;
+      position: absolute;
+      z-index: 1;
+      bottom: -90px;
+      right: -40%;
+    }
+  }
   > .inner {
     h1 {
       display: none;
@@ -182,6 +216,84 @@
               }
             }
           }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $tablet) {
+  .Department {
+    width: 100%;
+    figure {
+      &::before {
+        width: 100%;
+        top: -130px;
+        text-align: center;
+        left: 0;
+      }
+      &::after {
+        width: 100%;
+
+        bottom: -100px;
+        text-align: center;
+        right: 0;
+      }
+    }
+    > .inner {
+      .member_intro {
+        margin-top: 150px;
+        article {
+          width: 50%;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $mobile) {
+  .Department {
+    width: 100%;
+    padding: 0 10px;
+    figure {
+      width: 100%;
+      height: 220px;
+      margin: 90px 0;
+      &::before {
+        font-size: 60px;
+        top: -80px;
+      }
+      &::after {
+        font-size: 50px;
+        bottom: -70px;
+      }
+    }
+    > .inner {
+      .intro_container {
+        .wrap {
+          width: 100%;
+          display: flex;
+          flex-wrap: wrap;
+          position: relative;
+          .item {
+            width: 100%;
+            padding: 100px 0 50px 0;
+            span {
+              top: 50%;
+              right: 0;
+              transform: translateY(-50%);
+            }
+          }
+        }
+      }
+      .member_intro {
+        margin-top: 50px;
+        > h2 {
+          font-size: 35px;
+        }
+        article {
+          width: 100%;
+          margin-bottom: 40px;
         }
       }
     }
