--- a/src/scss/sub/_members.scss
+++ b/src/scss/sub/_members.scss
@@ -5,6 +5,7 @@
   #login {
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     form {
       width: 48%;
@@ -141,11 +142,39 @@
 
     .login_Img {
       width: 48%;
-      height: 800px;
+      height: 90vh;
       img {
         width: 100%;
         height: 100%;
         object-fit: cover;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $tablet) {
+  .Members {
+    #login {
+      form {
+        width: 58%;
+      }
+
+      .login_Img {
+        width: 38%;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $mobile) {
+  .Members {
+    #login {
+      form {
+        width: 100%;
+      }
+
+      .login_Img {
+        width: 100%;
       }
     }
   }
