--- a/src/scss/sub/_youtube.scss
+++ b/src/scss/sub/_youtube.scss
@@ -84,3 +84,63 @@
     }
   }
 }
+
+@media screen and (max-width: $tablet) {
+  .Youtube {
+    article {
+      &:nth-of-type(1) {
+        h3 {
+          font: bold 18px/1.2 'noto sans';
+          font-weight: 400;
+          margin-bottom: 30px;
+        }
+        p {
+          font-size: 15px;
+          font-weight: 100;
+          margin-bottom: 30px;
+        }
+      }
+      width: 50%;
+    }
+  }
+}
+
+@media screen and (max-width: $mobile) {
+  .Youtube {
+    article {
+      &:nth-of-type(1) {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        position: relative;
+        .pic {
+          width: 100%;
+          height: 210px;
+        }
+        > .txt {
+          width: 100%;
+          h3 {
+            margin-bottom: 10px;
+          }
+          p {
+            display: none;
+          }
+        }
+      }
+
+      width: 100%;
+      > .txt {
+        p {
+          font: 14px/1.5 'noto sans';
+          font-weight: 100;
+          color: #222;
+        }
+        span {
+          font: 12px/1 'noto sans';
+          font-weight: 100;
+        }
+      }
+    }
+  }
+}
