--- a/src/scss/main/_visual.scss
+++ b/src/scss/main/_visual.scss
@@ -1,10 +1,81 @@
 #visual {
   width: 100%;
-  height: 400px;
+  height: 80vh;
   position: relative;
-  img {
+  // overflow: hidden;
+
+  .panel {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    position: relative;
+    z-index: 1;
+    > li {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: none;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      &.on {
+        display: flex;
+      }
+    }
+  }
+
+  .prev {
+    position: absolute;
+    top: 50%;
+    left: 3vw;
+    transform: translateY(-50%);
+    width: 4vw;
+    height: 3vh;
+    font: 20px/1 'noto sans';
+    font-weight: 100;
+    color: #fff;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    z-index: 2;
+  }
+
+  .next {
+    position: absolute;
+    top: 50%;
+    right: 3vw;
+    transform: translateY(-50%);
+    width: 4vw;
+    height: 3vh;
+    font: 20px/1 'noto sans';
+    font-weight: 100;
+    color: #fff;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    z-index: 2;
+  }
+
+  .navi {
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
+    > li {
+      float: left;
+      width: 35px;
+      height: 2px;
+      background: #fff;
+      margin: 5px 5px;
+      cursor: pointer;
+      &.on {
+        height: 3px;
+        background: #333;
+      }
+    }
   }
 }
