--- a/src/scss/sub/_members.scss
+++ b/src/scss/sub/_members.scss
@@ -10,6 +10,7 @@
     form {
       width: 48%;
       position: relative;
+      word-break: break-all;
       fieldset {
         width: 90%;
         position: relative;
@@ -56,7 +57,6 @@
           color: hotpink;
         }
       }
-
       .field2 {
         position: relative;
         margin-top: 50px;
@@ -90,7 +90,6 @@
           color: hotpink;
         }
       }
-
       .field3 {
         position: relative;
         margin-top: 50px;
@@ -122,7 +121,6 @@
           color: hotpink;
         }
       }
-
       .btnset {
         width: 100%;
         padding: 15px;
@@ -139,7 +137,6 @@
         }
       }
     }
-
     .login_Img {
       width: 48%;
       height: 90vh;
@@ -171,10 +168,31 @@
     #login {
       form {
         width: 100%;
+        .field2 {
+          .checkbox {
+            width: 100%;
+            height: 70px;
+            flex-wrap: wrap;
+            p {
+              width: 100%;
+            }
+            input[type='radio'],
+            input[type='checkbox'] {
+              margin: 0 20px 0 10px;
+            }
+          }
+          > .err {
+            margin-top: 5px;
+            font: bold 14px/1 'roboto';
+            font-weight: 300;
+            color: hotpink;
+          }
+        }
       }
 
       .login_Img {
         width: 100%;
+        height: 60vh;
       }
     }
   }
