--- a/src/scss/sub/_community.scss
+++ b/src/scss/sub/_community.scss
@@ -268,6 +268,9 @@
           &:nth-of-type(3n + 1) button {
             background: rgb(146, 152, 139);
           }
+          &:nth-of-type(3n + 2) button {
+            background: #222;
+          }
           &:nth-of-type(3n) button {
             background: rgb(186, 172, 157);
           }
