--- a/src/scss/sub/_location.scss
+++ b/src/scss/sub/_location.scss
@@ -203,3 +203,101 @@
     }
   }
 }
+
+@media screen and (max-width: $mobile) {
+  .Location {
+    #map {
+      height: 40vh;
+    }
+    .location_intro {
+      width: 100%;
+
+      h2 {
+        &::before {
+          width: 30px;
+          left: 20vw;
+        }
+        &::after {
+          width: 30px;
+          left: 70vw;
+        }
+      }
+      p {
+        padding: 0 10%;
+      }
+    }
+
+    ul {
+      flex-wrap: wrap;
+      li {
+        width: 100%;
+        margin-bottom: 10px;
+        &:nth-of-type(1),
+        &:nth-of-type(2) {
+          margin-bottom: 0;
+        }
+      }
+    }
+    button {
+      padding: 5px 10px;
+      font: bold 12px/1 'roboto';
+      font-weight: 100;
+    }
+
+    #contact_info {
+      > li {
+        width: 100%;
+        margin-bottom: 100px;
+        &:last-of-type {
+          margin-bottom: 0;
+        }
+        span {
+          font: 14px/1 'playfair display';
+        }
+        h2 {
+          font: 30px/1 'playfair display';
+        }
+        form {
+          textarea {
+            padding: 10px 0 10px 10px;
+            font: 14px/1 'playfair display';
+            font-style: italic;
+            margin-bottom: 20px;
+          }
+          .info {
+            width: 48%;
+            input[type='text'] {
+              padding: 10px 0 10px 10px;
+            }
+            > span {
+              font: 12px/1.2 'playfair display';
+              margin-bottom: 20px;
+            }
+          }
+          input[type='submit'] {
+            width: 100%;
+            height: 30px;
+          }
+        }
+        .reserve_info {
+          > div {
+            margin-bottom: 10px;
+          }
+        }
+        > .sns {
+          margin-top: 20px;
+          a {
+            margin-right: 30px;
+            .i {
+              font-size: 15px;
+              color: #383838;
+            }
+            &:hover .i {
+              color: #c9ab81;
+            }
+          }
+        }
+      }
+    }
+  }
+}
