--- a/src/scss/common/_popup.scss
+++ b/src/scss/common/_popup.scss
@@ -28,7 +28,7 @@
     font-weight: 400;
     color: lightpink;
     position: absolute;
-    top: 40px;
+    top: 5vh;
     right: 5vw;
     cursor: pointer;
   }
