--- a/src/scss/sub/_youtube.scss
+++ b/src/scss/sub/_youtube.scss
@@ -16,6 +16,7 @@
         position: relative;
         width: 45%;
         margin-top: 0;
+        word-break: break-all;
         h3 {
           font: bold 20px/1.2 'noto sans';
           margin-bottom: 50px;
