--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,7 +12,10 @@ $mobile: 539px;
 
 //main
 @import 'main/visual';
-@import 'main/content';
+@import 'main/news';
+@import 'main/pics';
+@import 'main/vids';
+@import 'main/reviews';
 
 //sub
 @import 'sub/community';
