--- a/src/scss/main/_ad.scss
+++ b/src/scss/main/_ad.scss
@@ -1,9 +1,9 @@
 #ad {
   width: 100%;
   height: 100vh;
-  background: #e8f5e9;
+  background: #fce4ec;
   position: relative;
-  padding: 5vw;
+  padding: 5vh 5vw;
   h1 {
     display: block;
     width: 100%;
