--- a/src/scss/main/_btns.scss
+++ b/src/scss/main/_btns.scss
@@ -9,7 +9,7 @@
     height: 8px;
     background: #bbb;
     border-radius: 50%;
-    margin: 40px;
+    margin: 40px 0;
     cursor: pointer;
     transition: 0.5s;
     &.on {
