--- a/src/scss/main/_pics.scss
+++ b/src/scss/main/_pics.scss
@@ -1,9 +1,9 @@
 #pics {
   width: 100%;
-  height: 100vh;
-  background: #e8eaf6;
+  min-height: 80vh;
+  background: #f5f4f3;
   position: relative;
-  padding: 10vw;
+  padding: 10vh 10vw;
   h1 {
     display: block;
     width: 100%;
