메인페이지 member, youtube, flickr 미리보기

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,7 @@ $mobile: 539px;
 @import 'main/pics';
 @import 'main/vids';
 @import 'main/reviews';
+@import 'main/Ad';
 
 //sub
 @import 'sub/community';
