--- a/src/scss/main/_vids.scss
+++ b/src/scss/main/_vids.scss
@@ -1,9 +1,9 @@
 #vids {
   width: 100%;
-  height: 100vh;
-  background: #e0f7fa;
+  min-height: 80vh;
+  background: #f5f4f3;
   position: relative;
-  padding: 10vw;
+  padding: 5vh 2vw;
   h1 {
     display: block;
     width: 100%;
