스크롤시 메인페이지 pics 사진 시간차 적용

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,6 +17,7 @@ $mobile: 539px;
 @import 'main/vids';
 @import 'main/reviews';
 @import 'main/Ad';
+@import 'main/btns';
 
 //sub
 @import 'sub/community';
