--- a/src/scss/main/_pics.scss
+++ b/src/scss/main/_pics.scss
@@ -15,14 +15,55 @@
   }
   .preview {
     width: 100%;
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    overflow: hidden;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+    grid-auto-rows: minmax(100px, auto);
     li {
-      width: 18%;
+      width: 100%;
+      cursor: pointer;
+      transition: 1s;
+      overflow: hidden;
+      transform: translateY(100px);
+      opacity: 0;
+      transition-duration: 0.5s;
+      &:nth-of-type(1) {
+        grid-column: 1/3;
+        grid-row: 1/3;
+      }
+      &:nth-of-type(2) {
+        grid-column: 3;
+        grid-row: 1;
+      }
+      &:nth-of-type(3) {
+        grid-column: 3/5;
+        grid-row: 2;
+      }
+      &:nth-of-type(4) {
+        grid-column: 4;
+        grid-row: 1;
+      }
       img {
         width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+      :hover {
+        transform: scale(1.05);
+        filter: brightness(0.8);
+      }
+    }
+  }
+  &.on {
+    .preview {
+      li {
+        transform: translateY(0);
+        opacity: 1;
+        @for $i from 0 to 4 {
+          &:nth-of-type(#{$i + 1}) {
+            transition-delay: 0.2s * $i;
+          }
+        }
       }
     }
   }
