--- a/src/scss/main/_reviews.scss
+++ b/src/scss/main/_reviews.scss
@@ -1,7 +1,150 @@
 #reviews {
   width: 100%;
-  height: 100vh;
-  background: #fff8e1;
+  min-height: 80vh;
+  background: #fff;
   position: relative;
-  padding: 10vw;
+  padding: 10vh 10vw;
+  h1 {
+    display: block;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 50px;
+    font: 30px/1 'noto sans';
+    font-weight: 100;
+    color: #222;
+  }
+  .inner {
+    width: 100%;
+    height: 295px;
+    display: flex;
+    span {
+      width: 25%;
+      height: 100%;
+      background: #ffe8dc;
+      border-radius: 50%;
+      position: relative;
+      .fa-quote-left {
+        font-size: 45px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+    article {
+      width: 60%;
+      height: 100%;
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 0 70px 0 20px;
+      h2 {
+        font: 20px/1 'play';
+        color: #000;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        margin-bottom: 20px;
+      }
+      p {
+        font: 16px/1.8 'roboto';
+      }
+    }
+    .btnset {
+      width: 15%;
+      height: 100%;
+      padding: 0 0 0 20px;
+      position: relative;
+      .prev {
+        width: 44px;
+        height: 26px;
+        font: 14px/1 'roboto';
+        font-style: italic;
+        position: absolute;
+        bottom: 50%;
+        transform: translateY(0.5px);
+        right: 50%;
+        text-align: right;
+        border: none;
+        background: transparent;
+        // border-bottom: 1px solid #878787;
+        transition: 0.2s;
+        cursor: pointer;
+        &::before {
+          content: '';
+          display: block;
+          width: 6px;
+          height: 6px;
+          border-style: solid;
+          border-color: #999;
+          border-width: 1px 0 0 1px;
+          position: absolute;
+          top: 50%;
+          left: 0;
+          transform: rotate(-45deg) translateY(-50%);
+        }
+        &::after {
+          content: '';
+          display: block;
+          width: 44px;
+          height: 1px;
+          background: #878787;
+          position: absolute;
+          bottom: -1px;
+          transform: translateX(100%);
+          transition: 0.5s;
+        }
+        &:hover {
+          border-bottom: none;
+        }
+        &:hover::after {
+          display: block;
+          transform: translateX(0%);
+        }
+      }
+      .next {
+        width: 44px;
+        height: 26px;
+        font: 14px/1 'roboto';
+        font-style: italic;
+        position: absolute;
+        top: 50%;
+        transform: translateY(-0.5px);
+        left: 50%;
+        text-align: left;
+        border: none;
+        background: transparent;
+        cursor: pointer;
+        &::before {
+          content: '';
+          width: 6px;
+          height: 6px;
+          border-style: solid;
+          border-color: #999;
+          border-width: 1px 0 0 1px;
+          position: absolute;
+          top: 50%;
+          right: -3px;
+          transform: rotate(135deg) translateY(50%);
+          transition: 0.5s;
+        }
+        &::after {
+          content: '';
+          display: block;
+          width: 44px;
+          height: 1px;
+          background: #878787;
+          position: absolute;
+          top: 1px;
+          right: 0;
+          transform: translateX(-100%);
+          transition: 0.5s;
+        }
+        &:hover::after {
+          display: block;
+          transform: translateX(0%);
+        }
+      }
+    }
+  }
 }
