--- a/src/scss/main/_vids.scss
+++ b/src/scss/main/_vids.scss
@@ -13,28 +13,81 @@
     font-weight: 100;
     color: #222;
   }
-  .preview {
+  .swiper {
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    .inner {
-      width: 30%;
-      height: 50vh;
-      background: #fff;
-      padding: 20px;
-      .pic {
+    height: 60vh;
+    padding: 20px 0 30px;
+    // background: lightblue;
+    .swiper-slide {
+      width: 100%;
+      .inner {
         width: 100%;
-        img {
+        min-height: 40vh;
+        position: relative;
+        display: flex;
+        flex-wrap: wrap;
+        opacity: 0.5;
+        transform: scale(0.8);
+        transition: opacity 0.5 transfrom 0.5;
+        cursor: pointer;
+        .pic {
           width: 100%;
-          height: 100%;
-          object-fit: cover;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
+        }
+        h2 {
+          margin-top: 10px;
+          padding: 0 20px 0 0;
+          font: 20px/1.5 'noto sans';
+          font-weight: 100;
+          color: #222;
+          &::after {
+            content: '';
+            display: block;
+            width: 20px;
+            height: 2px;
+            background: #222;
+            margin-top: 10px;
+          }
         }
       }
-      h2 {
-        font: 18px/1.5 'noto sans';
-        font-weight: 100;
-        color: #222;
+      &.swiper-slide-active {
+        .inner {
+          opacity: 1;
+          transform: scale(1);
+        }
       }
+    }
+    .swiper-pagination {
+      bottom: 0;
+      .swiper-pagination-bullet {
+        transition: 0.5s;
+        background: rgba(34, 34, 34, 0.9);
+        width: 8px;
+        height: 8px;
+        border-radius: 4px;
+      }
+      .swiper-pagination-bullet-active {
+        width: 40px;
+      }
+    }
+    .swiper-button-next {
+      top: auto;
+      bottom: 0;
+      right: 50px;
+      transform: scale(0.5);
+      filter: grayscale(1);
+    }
+    .swiper-button-prev {
+      top: auto;
+      left: auto;
+      bottom: 0;
+      right: 90px;
+      transform: scale(0.5);
+      filter: grayscale(1);
     }
   }
 }
