--- a/src/scss/sub/_department.scss
+++ b/src/scss/sub/_department.scss
@@ -153,13 +153,16 @@
           width: 100%;
           position: relative;
           display: flex;
+          overflow: hidden;
           > .pic {
             width: 90%;
             height: 300px;
             filter: saturate(0.2);
             transition: 0.5s;
+            cursor: pointer;
             &:hover {
               filter: saturate(1.1);
+              transform: scale(1.05);
             }
             img {
               width: 100%;
