--- a/src/scss/main/_news.scss
+++ b/src/scss/main/_news.scss
@@ -59,6 +59,9 @@
         font-weight: 300;
         color: #222;
         margin-bottom: 20px;
+        transform: translateY(100px);
+        opacity: 0;
+        transition: 0.5s;
       }
       a {
         font: 14px/1 'noto sans';
@@ -66,6 +69,9 @@
         color: #222;
         padding: 5px 10px;
         border-bottom: 1px solid #222;
+        transform: translateY(100px);
+        opacity: 0;
+        transition: 0.5s;
       }
       h2,
       h3,
@@ -96,10 +102,21 @@
           transform: translateX(0);
           opacity: 1;
         }
-        @for $i from 0 to 3 {
-          &:nth-of-child(#{$i + 1}) {
-            transition-delay: 0.2s * $i;
-          }
+        h3 {
+          transition-delay: 0.2s;
+        }
+        h4 {
+          transition-delay: 0.4s;
+        }
+        p {
+          transform: translateY(0);
+          opacity: 1;
+          transition-delay: 0.6s;
+        }
+        a {
+          transform: translateY(0);
+          opacity: 1;
+          transition-delay: 0.8s;
         }
       }
     }
