--- a/src/scss/main/_visual.scss
+++ b/src/scss/main/_visual.scss
@@ -21,18 +21,68 @@
         height: 100%;
         object-fit: cover;
       }
+      .visual_txt {
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.2);
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 35vh 25vw;
+        color: #fff;
+        span {
+          width: 100%;
+          display: inline-block;
+          font: 16px/1 'roboto';
+          text-align: center;
+          transform: translateY(100px);
+          opacity: 0;
+          transition: 0.2s;
+        }
+        h2 {
+          font: 48px/1 'playfair display';
+          margin: 20px 0;
+          text-align: center;
+          transform: translateY(100px);
+          opacity: 0;
+          transition: 0.2s;
+        }
+        p {
+          font: 16px/1.5 'roboto';
+          text-align: center;
+          transform: translateY(100px);
+          opacity: 0;
+          transition: 0.2s;
+        }
+      }
       &.on {
-        display: flex;
+        display: block;
+        .visual_txt {
+          span {
+            transform: translateY(0);
+            opacity: 1;
+          }
+          h2 {
+            transform: translateY(0);
+            opacity: 1;
+            transition-delay: 0.2s;
+          }
+          p {
+            transform: translateY(0);
+            opacity: 1;
+            transition-delay: 0.4s;
+          }
+        }
       }
     }
   }
 
   .prev {
     position: absolute;
+
     bottom: 50px;
-    left: 50%;
-    transform: translateX(-500%);
-    width: 2vw;
+    left: 40%;
+    width: 30px;
     height: 3vh;
     font: 16px/1 'noto sans';
     font-weight: 400;
@@ -46,9 +96,8 @@
   .next {
     position: absolute;
     bottom: 50px;
-    right: 50%;
-    transform: translateX(500%);
-    width: 2vw;
+    right: 40%;
+    width: 30px;
     height: 3vh;
     font: 16px/1 'noto sans';
     font-weight: 400;
