--- a/src/scss/main/_Ad.scss
+++ b/src/scss/main/_Ad.scss
@@ -23,3 +23,18 @@
     }
   }
 }
+
+@media screen and (max-width: $tablet) {
+  #ad {
+    min-height: 60vh;
+    .video {
+      width: 100%;
+      height: 50vh;
+      video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+  }
+}
