--- a/src/scss/main/_reviews.scss
+++ b/src/scss/main/_reviews.scss
@@ -3,146 +3,161 @@
   min-height: 80vh;
   background: #fff;
   position: relative;
-  padding: 10vh 10vw;
-  h1 {
-    display: block;
+  .bg {
     width: 100%;
-    text-align: center;
-    margin-bottom: 70px;
-    font: 40px/1 'playfair display';
-    font-weight: 400;
-    color: #222;
+    height: 450px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      filter: brightness(0.5);
+    }
   }
-  .inner {
-    width: 100%;
-    height: 295px;
-    display: flex;
-    span {
-      width: 25%;
-      height: 100%;
-      background: #ffe8dc;
-      border-radius: 50%;
-      position: relative;
-      .fa-quote-left {
-        font-size: 45px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-      }
+  .review_con {
+    width: 1180px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 1%;
+    h1 {
+      display: block;
+      width: 100%;
+      text-align: center;
+      // margin-bottom: 150px;
+      font: 40px/1 'playfair display';
+      font-weight: 400;
+      color: #fff;
+      margin-bottom: 5vh;
     }
-    article {
-      width: 60%;
-      height: 100%;
-
+    .inner {
+      width: 100%;
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      padding: 0 70px 0 20px;
-      h2 {
-        font: 20px/1 'play';
-        color: #000;
-        letter-spacing: 2px;
-        text-transform: uppercase;
-        margin-bottom: 20px;
-      }
-      p {
-        font: 16px/1.8 'roboto';
+      flex-wrap: wrap;
+      margin-top: 100px;
+      article {
+        width: 23.5%;
+        height: 250px;
+        display: flex;
+        flex-direction: column;
+        border-radius: 5px;
+        box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+        margin-right: 2%;
+        padding: 15px;
+        transform: translateY(100px) rotateY(180deg);
+        opacity: 0;
+        transition-duration: 0.5s;
+        &:last-of-type {
+          margin-right: 0;
+        }
+        &:nth-of-type(1) {
+          background: #e0e0e0;
+        }
+        &:nth-of-type(2) {
+          background: rgba(146, 152, 139);
+        }
+        &:nth-of-type(3) {
+          background: rgb(186, 172, 157);
+        }
+        &:nth-of-type(4) {
+          background: #fef0ea;
+        }
+        h2 {
+          font: 18px/1.3 'play';
+          color: #000;
+          letter-spacing: 1px;
+          text-transform: uppercase;
+          margin-bottom: 30px;
+        }
+        p {
+          font: 14px/1.8 'roboto';
+        }
       }
     }
-    .btnset {
-      width: 15%;
-      height: 100%;
-      padding: 0 0 0 20px;
-      position: relative;
-      .prev {
-        width: 44px;
-        height: 26px;
-        font: 14px/1 'roboto';
-        font-style: italic;
-        position: absolute;
-        bottom: 50%;
-        transform: translateY(0.5px);
-        right: 50%;
-        text-align: right;
-        border: none;
-        background: transparent;
-        // border-bottom: 1px solid #878787;
-        transition: 0.2s;
-        cursor: pointer;
-        &::before {
-          content: '';
-          display: block;
-          width: 6px;
-          height: 6px;
-          border-style: solid;
-          border-color: #999;
-          border-width: 1px 0 0 1px;
-          position: absolute;
-          top: 50%;
-          left: 0;
-          transform: rotate(-45deg) translateY(-50%);
-        }
-        &::after {
-          content: '';
-          display: block;
-          width: 44px;
-          height: 1px;
-          background: #878787;
-          position: absolute;
-          bottom: -1px;
-          transform: translateX(100%);
-          transition: 0.5s;
-        }
-        &:hover {
-          border-bottom: none;
-        }
-        &:hover::after {
-          display: block;
-          transform: translateX(0%);
+  }
+  &.on {
+    .review_con {
+      .inner {
+        article {
+          transition-delay: 0.5s;
+          transform: translateY(0px) rotate(0deg);
+          opacity: 1;
+
+          @for $i from 0 to 5 {
+            &:nth-of-type(#{$i + 1}) {
+              transition-delay: 0.2s * $i;
+            }
+          }
         }
       }
-      .next {
-        width: 44px;
-        height: 26px;
-        font: 14px/1 'roboto';
-        font-style: italic;
-        position: absolute;
-        top: 50%;
-        transform: translateY(-0.5px);
-        left: 50%;
-        text-align: left;
-        border: none;
-        background: transparent;
-        cursor: pointer;
-        &::before {
-          content: '';
-          width: 6px;
-          height: 6px;
-          border-style: solid;
-          border-color: #999;
-          border-width: 1px 0 0 1px;
-          position: absolute;
-          top: 50%;
-          right: -3px;
-          transform: rotate(135deg) translateY(50%);
-          transition: 0.5s;
+    }
+  }
+}
+
+@media screen and (max-width: $tablet) {
+  #reviews {
+    .review_con {
+      width: 100%;
+      .inner {
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        margin-top: 100px;
+        padding: 2vw;
+        article {
+          width: 23.5%;
+          height: 250px;
+          display: flex;
+          flex-direction: column;
+          border-radius: 5px;
+          box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
+          margin-right: 2%;
+          padding: 15px;
+          transform: translateY(100px) rotateY(180deg);
+          opacity: 0;
+          transition-duration: 0.5s;
+          &:last-of-type {
+            margin-right: 0;
+          }
+          &:nth-of-type(1) {
+            background: #e0e0e0;
+          }
+          &:nth-of-type(2) {
+            background: rgba(146, 152, 139);
+          }
+          &:nth-of-type(3) {
+            background: rgb(186, 172, 157);
+          }
+          &:nth-of-type(4) {
+            background: #fef0ea;
+          }
+          h2 {
+            font: 18px/1.3 'play';
+            color: #000;
+            letter-spacing: 1px;
+            text-transform: uppercase;
+            margin-bottom: 30px;
+          }
+          p {
+            font: 14px/1.8 'roboto';
+          }
         }
-        &::after {
-          content: '';
-          display: block;
-          width: 44px;
-          height: 1px;
-          background: #878787;
-          position: absolute;
-          top: 1px;
-          right: 0;
-          transform: translateX(-100%);
-          transition: 0.5s;
-        }
-        &:hover::after {
-          display: block;
-          transform: translateX(0%);
+      }
+    }
+    &.on {
+      .review_con {
+        .inner {
+          article {
+            transition-delay: 0.5s;
+            transform: translateY(0px) rotate(0deg);
+            opacity: 1;
+
+            @for $i from 0 to 5 {
+              &:nth-of-type(#{$i + 1}) {
+                transition-delay: 0.2s * $i;
+              }
+            }
+          }
         }
       }
     }
