--- a/src/scss/main/_visual.scss
+++ b/src/scss/main/_visual.scss
@@ -116,7 +116,7 @@
     z-index: 2;
     > li {
       float: left;
-      width: 35px;
+      width: 2vw;
       height: 2px;
       background: #fff;
       margin: 5px 5px;
@@ -124,6 +124,63 @@
       &.on {
         height: 3px;
         background: #333;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $mobile) {
+  #visual {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    // overflow: hidden;
+    .panel {
+      > li {
+        .visual_txt {
+          padding: 35vh 15vw;
+          h2 {
+            font: 40px/1 'playfair display';
+          }
+          p {
+            font: 14px/1.5 'roboto';
+          }
+        }
+      }
+    }
+    .prev {
+      top: 50%;
+      transform: translateY(-50%);
+      left: 2%;
+      width: 20px;
+      font: 12px/1 'noto sans';
+    }
+
+    .next {
+      top: 50%;
+      transform: translateY(-50%);
+      right: 2%;
+      width: 20px;
+      font: 12px/1 'noto sans';
+    }
+
+    .navi {
+      position: absolute;
+      bottom: 50px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 2;
+      > li {
+        float: left;
+        width: 2vw;
+        height: 2px;
+        background: #fff;
+        margin: 5px 5px;
+        cursor: pointer;
+        &.on {
+          height: 3px;
+          background: #333;
+        }
       }
     }
   }
