--- a/src/scss/common/_footer.scss
+++ b/src/scss/common/_footer.scss
@@ -100,3 +100,57 @@ footer {
     }
   }
 }
+
+@media screen and (max-width: $tablet) {
+  footer {
+    padding: 30px 2vw;
+    .inner {
+      width: 100%;
+    }
+  }
+}
+
+@media screen and (max-width: $mobile) {
+  footer {
+    .inner {
+      .footer_txt {
+        .company {
+          width: 100%;
+          margin-bottom: 20px;
+          img {
+            width: 70%;
+            margin-bottom: 10px;
+          }
+          p {
+            font: 12px/1.5 'noto sans';
+            font-weight: 100;
+            text-align: center;
+          }
+        }
+        > .contact {
+          display: none;
+        }
+        > .sns {
+          width: 100%;
+          h2 {
+            font: 16px/1.2 'noto sans';
+            text-align: center;
+          }
+          p {
+            display: none;
+          }
+          .sns_set {
+            display: flex;
+            justify-content: center;
+          }
+        }
+      }
+      > p {
+        font: 12px/1.3 'roboto';
+        margin-bottom: 0;
+        text-align: center;
+        margin-top: 20px;
+      }
+    }
+  }
+}
