--- a/src/scss/main/_btns.scss
+++ b/src/scss/main/_btns.scss
@@ -20,7 +20,7 @@
   }
 }
 
-@media screen and (max-width: $mobile) {
+@media screen and (max-width: $tablet) {
   .scroll_navi {
     display: none;
   }
