--- a/src/scss/main/_pics.scss
+++ b/src/scss/main/_pics.scss
@@ -25,7 +25,7 @@
       transition: 1s;
       overflow: hidden;
       transform: translateY(100px);
-      opacity: 0;
+      opacity: 1;
       transition-duration: 0.5s;
       &:nth-of-type(1) {
         grid-column: 1/3;
@@ -62,6 +62,50 @@
         @for $i from 0 to 4 {
           &:nth-of-type(#{$i + 1}) {
             transition-delay: 0.2s * $i;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: $mobile) {
+  #pics {
+    padding: 5vh 5vw;
+    h1 {
+      font: 35px/1 'playfair display';
+    }
+    .preview {
+      grid-template-columns: repeat(2, 1fr);
+      grid-auto-rows: 200px;
+      li {
+        &:nth-of-type(1) {
+          grid-column: 1/3;
+          grid-row: 1/3;
+        }
+        &:nth-of-type(2) {
+          grid-column: 1;
+          grid-row: 3;
+        }
+        &:nth-of-type(3) {
+          grid-column: 1/3;
+          grid-row: 4;
+        }
+        &:nth-of-type(4) {
+          grid-column: 2;
+          grid-row: 3;
+        }
+      }
+    }
+    &.on {
+      .preview {
+        li {
+          transform: translateY(0);
+          opacity: 1;
+          @for $i from 0 to 4 {
+            &:nth-of-type(#{$i + 1}) {
+              transition-delay: 0.2s * $i;
+            }
           }
         }
       }
