--- a/src/scss/main/_reviews.scss
+++ b/src/scss/main/_reviews.scss
@@ -99,64 +99,42 @@
     .review_con {
       width: 100%;
       .inner {
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        margin-top: 100px;
         padding: 2vw;
-        article {
-          width: 23.5%;
-          height: 250px;
-          display: flex;
-          flex-direction: column;
-          border-radius: 5px;
-          box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.2);
-          margin-right: 2%;
-          padding: 15px;
-          transform: translateY(100px) rotateY(180deg);
-          opacity: 0;
-          transition-duration: 0.5s;
-          &:last-of-type {
-            margin-right: 0;
-          }
-          &:nth-of-type(1) {
-            background: #e0e0e0;
-          }
-          &:nth-of-type(2) {
-            background: rgba(146, 152, 139);
-          }
-          &:nth-of-type(3) {
-            background: rgb(186, 172, 157);
-          }
-          &:nth-of-type(4) {
-            background: #fef0ea;
-          }
-          h2 {
-            font: 18px/1.3 'play';
-            color: #000;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-            margin-bottom: 30px;
-          }
-          p {
-            font: 14px/1.8 'roboto';
-          }
-        }
       }
     }
-    &.on {
-      .review_con {
-        .inner {
-          article {
-            transition-delay: 0.5s;
-            transform: translateY(0px) rotate(0deg);
-            opacity: 1;
+  }
+}
 
-            @for $i from 0 to 5 {
-              &:nth-of-type(#{$i + 1}) {
-                transition-delay: 0.2s * $i;
-              }
-            }
+@media screen and (max-width: $mobile) {
+  #reviews {
+    min-height: 110vh;
+    .bg {
+      height: 300px;
+    }
+    .review_con {
+      width: 100%;
+      h1 {
+        font: 35px/1 'playfair display';
+        margin-bottom: 0;
+      }
+      .inner {
+        justify-content: center;
+        article {
+          width: 48%;
+          box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.2);
+          margin-right: 2%;
+          padding: 15px;
+          &:nth-of-type(1) {
+            margin-bottom: 2%;
+          }
+          &:nth-of-type(2) {
+            margin-right: 0;
+          }
+          h2 {
+            font: 14px/1.3 'play';
+          }
+          p {
+            font: 12px/1.8 'roboto';
           }
         }
       }
